--- a/homepage/cameras.html
+++ b/homepage/cameras.html
@@ -11,11 +11,11 @@
 	<div class="menu">
       <!-- Menu icon -->
       <div class="icon-close">
-        <img src="Images/close.png">
+        <img src="images/close.png">
       </div>
       <!-- Menu -->
       <ul>
-        <li><a href="Index.html">Main</a></li>
+        <li><a href="index.html">Main</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
